# Melbourne-House-Prices-Analysis-D100-and-D400-Final-Project-

./: .gitignore  .pre-commit-config.yaml  README.md  enviornment.yaml  environment.yaml  pyproject.toml
data/: X_test.parquet  X_train.parquet  cleaned_data.parquet  test.parquet  train.parquet  variables_descriptors.md  y_test.parquet  y_train.parquet
final_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
final_project/data/: data.py
final_project/evaluation/: evaluation.py
final_project/modelling/: save_load.py
final_project/modelling/modelling_GLM/: modelling_GLM.py
final_project/modelling/modelling_LGBM/: modelling_LGBM.py
final_project/modelling_GLM/: modelling_GLM.py
final_project/modelling_LGBM/: modelling_LGBM.py
final_project/notebooks/: eda_cleaning.ipynb  evaluation.ipynb  model_training.py
final_project/preprocessing/: feature_engineering.py  preprocessing.py
final_project/visualisations/: visualisations.py
notebooks_and_scripts/: evaluation.ipynb
pipelines/: glm_best_pipeline.joblib  lgbm_best_pipeline.joblib
tests/: test_custombinarizer.py
