[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final_project"
version = "0.1.0"
description = "House prices final project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }


dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "flake8",
  "black",
  "isort",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["final_project*"]
